--- a/book.bib
+++ b/book.bib
@@ -383,3 +383,21 @@
   year={1994},
   publisher={Cambridge University Press}
 }
+
+@article{zhao2007stagewise,
+  title={Stagewise lasso},
+  author={Zhao, Peng and Yu, Bin},
+  journal={The Journal of Machine Learning Research},
+  volume={8},
+  pages={2701--2726},
+  year={2007},
+  publisher={JMLR. org}
+}
+
+@inproceedings{chen2016xgboost,
+  title={Xgboost: A scalable tree boosting system},
+  author={Chen, Tianqi and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+  pages={785--794},
+  year={2016}
+}
