--- a/04.1-knn.Rmd
+++ b/04.1-knn.Rmd
@@ -17,7 +17,7 @@
   par(mfrow=c(1,1))
 ```
 
-# (PART) Nonparametric Models {-}
+# (PART) Local Averaging and Kernel Smoothing {-}
 
 # K-Neariest Neighber
 
